gccida/c0/ix86_variable_issue
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_variable_issue/src/i386.c:11049:1: error: must use 'enum' tag to refer to type 'attr_ppro_uops'
attr_ppro_uops uops; // [rsp+4h] [rbp-2Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_variable_issue/src/i386.c:11059:12: error: expected expression
*( _OWORD *)ix86_sched_data.ppro.decode = ( unsigned __int64)insn; 
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_variable_issue/src/i386.c:11059:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)ix86_sched_data.ppro.decode = ( unsigned __int64)insn; 
   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_variable_issue/src/i386.c:11069:12: error: expected expression
*( _OWORD *)ix86_sched_data.ppro.decode = ( unsigned __int64)insn; 
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_variable_issue/src/i386.c:11069:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)ix86_sched_data.ppro.decode = ( unsigned __int64)insn; 
   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_variable_issue/src/i386.c:11088:12: error: expected expression
*( _OWORD *)ix86_sched_data.ppro.decode = 0uLL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_variable_issue/src/i386.c:11088:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)ix86_sched_data.ppro.decode = 0uLL; 
   ^
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_variable_issue/src/obj/i386.o] Error 1
